# ollama

./: .gitignore  Dockerfile  LICENSE.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: test-and-deploy.yml
notebooks/: osllmh.ipynb
osllmh/: __init__.py  engine.py  vector_stores.py
osllmh/dashboard/: app.py
osllmh/dashboard/assets/: manifest.json
osllmh/dashboard/components/: dash_store.py  engine_store.py
osllmh/dashboard/pages/: __init__.py  logs.py  query.py  setup.py
osllmh/utils/: cli.py  custom_logger.py
